# $Id$

2008-12-01	Denis M. Gabaidulin

	* main/Utils/Mobile/MobileRequestDetektor.class.php: mobile request
	detektor added.

2008-11-23	Konstantin V. Arkhipov

	* main/DAOs/Workers/: key's generation extracted to makeIdKey() and
	makeQueryKey(); full support for per-class watermarks, finally;
	obscure uncaching bug fixed, spooted by giv.

2008-11-21	Vladlen Y. Koshelev

	* main/UnifiedContainer/ManyToManyLinkedWorker.class.php: fixed duplicate
	join error occured when custom criteria has joiner on container's helper
	table.

2008-11-19	Vladlen Y. Koshelev

	* main/DAOs/ProtoDAO.class.php: fixed wrong cid-field table when lazy
	fetching collection.

2008-11-17	Konstantin V. Arkhipov

	* core/Form/Form.class.php: restore original primitive's value in
	cases of failed import.

	* core/Form/, ext/core/Form/: removed methods: getActualValue(),
	getSafeValue(), getDefault(), setDefault(), getActualChoiceValue().

2008-11-05	Konstantin V. Arkhipov

	* core/Form/Form.class.php: getPrimitiveError() renamed to getError(),
	dropPrimitiveError() renamed to dropError(), toFormValue() renamed to
	getLogicValue().

	* core/Form/PlainForm.class.php: getPrimitiveList() renamed to
	getList(), getPrimitiveNames() renamed to getNameList(),
	core/Form/PlainForm.class.php: primitiveExists() renamed to exists().

2008-10-31	Sergey S. Sergeev

	* incubator/classes/Routers,test/incubator/Routers: experemental
	feature for rewriting urls.

	* test/misc/ServerVarUtils.class.php: test case helper.

2008-10-20	Ivan Y. Khvostishkov

	* core/Base/IntervalUnit.class.php: compareTo() implemented.

2008-10-14	Ivan Y. Khvostishkov

	* main/DAOs/Workers/BaseDaoWorker.class.php: uncacheByQuery()'s
	visibility changed to public.

2008-10-02	Ivan Y. Khvostishkov

	* core/Base/IntervalUnit.class.php: fixed truncation to day interval
	for ceil case.

2008-09-24	Sergey S. Sergeev

	* main/Criteria/Criteria.class.php: criteria {query} combination support.

2008-09-22	Konstantin V. Arkhipov
