@@ -1,5 +1,14 @@
 # $Id$
 
+2008-12-15	Vladlen Y. Koshelev
+
+	* main/base/AbstractProtoClass.class.php, test/misc/DAOTest.class.php:
+	lazy property import fixed, related test added. 
+
+	* meta/types/ObjectType.class.php: check if lazy property is enumeration
+	using meta information (property's class might not be generated yet to check
+	its type by ReflectionClass).
+
 2008-12-01	Denis M. Gabaidulin
 
 	* main/Utils/Mobile/MobileRequestDetektor.class.php: mobile request
